kubernetes/express-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-app
  labels:
    app: express-app
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 3000
    name: http
  selector:
    app: express-app
    tier: frontend
