kubernetes/express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
      kubernetes.io/ingress.class: ing-class1
        
    name: express-app
spec:
  rules:
    - host: app.express.com
      http:
        paths:
           - backend:
               service:
                 name: express-app
                 port:
                   number: 3000
             path: /
             pathType: Exact
